# lindi

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: codespell.yml  integration_tests.yml  linter_checks.yml
devel/: demonstrate_slow_get_chunk_info.py  test_load_pynwb.py  test_write_nwb.py  write_tar_header.py
devel/old_tests/: old_tests.py  test_lindi_client.py  test_with_real_data.py  tests.py
docs/: special_zarr_annotations.md  tar.md
examples/: _check_equal.py  amend_remote_nwb_as_lindi_tar.py  benchmark1.py  create_and_read_lindi_json.py  create_and_read_lindi_tar.py  example1.py  example2.py  example3.py  example_a.py  example_ammend_remote_nwb.py  example_b.py  example_c.py  example_create_zarr_nwb.py  example_d.py  example_edit_nwb.py  example_tar_nwb.py  lindi_demo.ipynb  represent_remote_nwb_as_lindi_json.py  try_pynwb.py  write_lindi_binary.py
examples/DANDI/: nwbextractors.py  preprocess_ephys.py
lindi/: __init__.py
lindi/File/: File.py
lindi/LindiClient/: LindiAttributes.py  LindiClient.py  LindiDataset.py  LindiGroup.py  LindiReference.py  __init__.py
lindi/LindiH5Store/: _util.py  (+4 more)
scratch/: zarr_playground.ipynb
tests/: test_copy.py  test_core.py  test_examples.py  test_external_array_link.py  test_fletcher32.py  test_lindi_file.py  test_lindi_h5py_file.py  test_lindi_tar.py  test_load_000409.py  test_local_cache.py  test_misc.py  test_patch.py  test_pynwb.py  test_remote_data.py  test_split_contiguous_dataset.py  test_staging_area.py  test_store.py  test_with_real_data.py  test_zarr_write.py  utils.py
(+81 files in other folders)
