[tool.poetry]
name = "lindi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numcodecs = "^0.12.1"
zarr = "^2.16.1"
h5py = "^3.10.0"
remfile = "^0.1.9"
fsspec = "^2023.12.2"
aiohttp = "^3.9.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
