[tool.poetry]
name = "lindi"
version = "0.4.1"
description = ""
authors = [
    "Jeremy Magland <jmagland@flatironinstitute.org>",
    "Ryan Ly <rly@lbl.gov>",
    "Oliver Ruebel <oruebel@lbl.gov>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numcodecs = ">=0.11.0" # relax version requirement for use with pyodide
zarr = "^2.16.1"
h5py = "^3.10.0"
requests = "^2.31.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pynwb = "^2.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.3.3"
pyright = "1.1.335"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
